fix code student-profile

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -61,7 +61,7 @@
                 <div class="card card-shadow h-100 border-start border-warning border-5">
                     <div class="card-body">
                         <p class="card-text text-muted mb-1">Top Performer</p>
-                        <h5 class="card-title text-warning fw-bold">Alex Johnson</h5> <small class="text-muted">(96.2% Score)</small> </div>
+                        <h5 class="card-title text-warning fw-bold">Chhitchhanut Nang </h5> <small class="text-muted">(96.2% Score)</small> </div>
                 </div>
             </div>
             <div class="col-xl-3 col-md-6">
